# coinbase-advanced-runtime

./: .env.example  .gitignore  CAMBIO_FINAL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RESULTS.md  RESUMEN_FINAL.md  RUNBOOK.md  SETUP.md  ab_regime_sweep.csv  ab_regime_sweep_btc.txt  fortress_all_changes.patch  prod.env.example  pyproject.toml  pytest.ini  results_BTC-USD_1h.txt  results_ETH-USD_1h.txt  results_SOL-USD_1h.txt  results_baseline_full.txt  results_baseline_selector.txt  results_baseline_sma.txt  results_full.txt  results_qty_0.005.txt  results_qty_0.015.txt  results_qty_0.02.txt  results_qty_0.03.txt  results_selector.txt  results_sma.txt
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
config/: dry_run.yaml  dry_run_aggressive.yaml  live_canary.yaml  observe_only.yaml
configs/: prod_symbols.yaml  shadow.yaml  shadow_test.yaml  symbols.yaml
docs/: CLAUDE_CODE_EXECUTOR_PROMPT.md  CLAUDE_CODE_MONITOR_PROMPT.md  SHADOW_LIVE_CHECKLIST.md  SHADOW_LIVE_GUIDE.md  dry_run_24h_report.md  multi_timeframe_analysis.md  observe_only_validation.md  stability_report.md
scripts/: ab_regime_sweep.py  analyze_dry_run.py  backup.sh  build_smoke.sh  ci_smoke.sh  compare_assets.py  dry_run_runner.py  observe_only_runner.py  setup.ps1  setup.sh  stability_test.py
src/: __init__.py  config.py  config_validator.py  credentials.py  exchange_simulator.py  main.py  shadow_report.py  shadow_runner.py
src/accounting/: __init__.py  ledger.py  portfolio_snapshot.py
src/backtest/: __init__.py  compare_sizing.py  compare_strategies.py  data_downloader.py  data_feed.py  data_replay.py  engine.py  ledger.py  paper_executor.py  report.py  risk_adapter.py  run.py  segmented_runner.py  strategy_adapter.py  synthetic_data.py
src/core/: __init__.py  coinbase_exchange.py  coinbase_websocket.py  jwt_auth.py  quantization.py
src/execution/: __init__.py  execution_report.py  idempotency.py  order_planner.py  orders.py  pending_store.py  twap.py
src/extracted/: __init__.py  _extracted_circuit_breaker.py  _extracted_ledger.py  _extracted_order_executor.py
src/marketdata/: __init__.py  orderbook.py  service.py
src/monitoring/: __init__.py  alert_manager.py  health_check.py
src/observability/: __init__.py  json_sink.py  metrics.py
src/oms/: __init__.py  reconcile.py
src/quantitative/: __init__.py  advanced.py  indicators.py  metrics.py
src/risk/: __init__.py  adaptive_sizer.py  circuit_breaker.py  daily_risk_metrics.py  exposure.py  gate.py  kill_switch.py  position_sizer.py
src/simulation/: __init__.py  paper_engine.py
src/strategy/: __init__.py  base.py  macd_strategy.py  manager.py  mean_reversion.py  momentum_breakout.py  mtf_filter.py  noop.py  regime_detector.py  registry.py  rsi_divergence.py  selector.py  signal.py  sma_crossover.py  trailing_stop.py  vwap_strategy.py
src/validation/: __init__.py  gem_protocol.py
tests/: __init__.py  test_shadow_integration.py
tests/integration/: test_backtest_live_consistency.py  test_circuit_breaker_integration.py  test_coinbase_integration.py  test_duplicate_fill_replay.py  test_kill_switch.py  test_mock_exchange.py  test_pipeline_e2e.py  test_reconcile_live.py  test_reconcile_rest_ws_divergence.py  test_replay_integration.py  test_restart_recovery.py  test_risk_execution_flow.py  test_runtime_smoke.py  test_signal_intent_pipeline.py  test_sqlite_recovery_atomicity.py  test_websocket_integration.py
tests/property/: test_event_permutations.py
tests/quantitative/: __init__.py  conftest.py  test_advanced.py  test_certification_report.py  test_quant_final.py  (+3 more)
(+99 files in other folders)
