[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortress-v4"
version = "4.0.0"
description = "Bot de trading para Coinbase Advanced Trade API v3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fortress Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "tenacity>=8.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
fortress = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true

# Strict overrides for modules with complete type hints
[[tool.mypy.overrides]]
module = [
    "src.risk.gate",
    "src.risk.kill_switch",
    "src.execution.execution_report",
    "src.quantitative.metrics",
    "src.backtest.ledger",
    "src.backtest.report",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "--tb=short --cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 70

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "src/core/coinbase_exchange.py",
    "src/core/coinbase_websocket.py",
    "src/core/jwt_auth.py",
]
